@@ -1,3 +1,11 @@
+Thu Apr 29 14:17:46 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>
+
+	* ace/config-doxygen.h (OPENSSL_VERSION_NUMBER):
+
+	  Define this macro to be greater than a certain value so that the
+	  ACE_SSL asynchronous IO class documentation can be generated by
+	  Doxygen.  [Bug 1748]
+
 Thu Apr 29 13:48:30 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
 	* ace/OS_NS_sys_socket.inl (sendv):
